# zelador_do_vazio

./: CMakeLists.txt  LICENSE  README.md  main.py
managers/: day_manager.py  game_manager.py  maintenance_manager.py  sanity_manager.py
systems/: crt_effect.py  radar_system.py  radio_system.py
